test/parsing/errors/preIncDecOp.chpl
var x : int = 3;
x = --x;
